Home Controller And Bootstrap Theme Added

--- a/Ecommerce.WebApp/Views/Customer/Create.cshtml
+++ b/Ecommerce.WebApp/Views/Customer/Create.cshtml
@@ -3,6 +3,7 @@
 
 <head>
     <title>Customer Create</title>
+    <h1>Create Customer</h1>
     <link href="~/bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet" />
 </head>
 <body>
