adding a change from the Experiment branch

--- a/Ecommerce.WebApp/Views/Home/Index.cshtml
+++ b/Ecommerce.WebApp/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
 
     <title>
 
-        Overview &middot; Dashboard theme &middot; Official Bootstrap Themes
+        Rj Porosh &middot;Overview &middot; Dashboard theme &middot; Official Bootstrap Themes
 
     </title>
 
@@ -68,7 +68,7 @@
                                 <a class="oy active" href="@Url.Action("Index", "Home")">Overview</a>
                             </li>
                             <li class="pa">
-                                <a class="oy " href="@Url.Action("Create", "Customer")">Customer</a>
+                                <a class="oy " href="@Url.Action("Create", "Customer")">Create Customer</a>
                             </li>
                             <li class="pa">
                                 <a class="oy " href="@Url.Action("Index", "Customer")">List of Customer</a>
