--- a/Ecommerce.WebApp/Views/Customer/Index.cshtml
+++ b/Ecommerce.WebApp/Views/Customer/Index.cshtml
@@ -1,8 +1,50 @@
-﻿
-<html>
+﻿@model IEnumerable<Ecommerce.Models.Customer>
 
-<head></head>
-<body>
-<h1> Customer Created Successfully!</h1>
-</body>
-</html>
+@{
+    ViewData["Title"] = "Index";
+}
+
+<h1>Index</h1>
+
+<p>
+    <button class="btn btn-primary" onclick="location.href = '@Url.Action("Create", "Customer")'">Create New</button>
+</p>
+<table class="table table-hover">
+    <thead class="thead-dark">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LoyaltyPoint)
+            </th>
+            
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LoyaltyPoint)
+                </td>
+                
+                <td>
+                    <button class="btn btn-warning" onclick="location.href = '@Url.Action("Edit", "Customer")?id=@item.Id'">Edit</button> |
+                    <button class="btn btn-info" onclick="location.href = '@Url.Action("Details", "Customer")?id=@item.Id'">Details</button> |
+                    <button class="btn btn-danger" onclick="location.href = '@Url.Action("Delete", "Customer")?id=@item.Id'">Delete</button>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
